src/parser/parser.output
Terminals which are not used

   EOL
   "import"


Grammar

    0 $accept: start END

    1 start: stmtlist END

    2 stmtlist: stmtlist_buffer

    3 stmtlist_buffer: /* empty */
    4                | stmtlist_buffer stmt

    5 stmt: stmtexpr
    6     | assignstmt
    7     | ifstmt
    8     | whilestmt
    9     | forstmt
   10     | returnstmt
   11     | funcdeclstmt
   12     | classdeclstmt

   13 stmtexpr: expr exprend

   14 exprend: ';'

   15 assignstmt: expr '=' expr exprend
   16           | typedvariable '=' expr exprend

   17 ifstmt: "if" expr "then" stmtlist ifstmt_else "end"

   18 ifstmt_else: /* empty */
   19            | "elsif" expr "then" stmtlist ifstmt_else
   20            | "else" stmtlist

   21 whilestmt: "while" expr "do" stmtlist "end"

   22 forstmt: "for" variable "<-" expr "do" stmtlist "end"

   23 returnstmt: "return" exprend
   24           | "return" expr exprend

   25 funcdeclstmt: "def" IDENTIFIER typeparams '(' paramlist ')' rettype '=' stmtlist "end"

   26 classdeclstmt: "class" IDENTIFIER typeparams inheritance classbodystmtlist "end"

   27 attrdeclstmt: "attr" variable '=' expr
   28             | "attr" typedvariable attropteq

   29 attropteq: /* empty */
   30          | '=' expr

   31 classbodystmt: funcdeclstmt
   32              | classdeclstmt
   33              | attrdeclstmt

   34 classbodystmtlist: classbodystmtlist_buffer

   35 classbodystmtlist_buffer: /* empty */
   36                         | classbodystmtlist_buffer classbodystmt

   37 typeparams: /* empty */
   38           | '{' typeparams0 '}'

   39 typeparams0: typeparams0rest IDENTIFIER

   40 typeparams0rest: /* empty */
   41                | typeparams0rest IDENTIFIER ','

   42 inheritance: /* empty */
   43            | "<-" paramtypenames

   44 rettype: /* empty */
   45        | "->" paramtypename

   46 paramlist: /* empty */
   47          | paramlist0 typedvariable

   48 paramlist0: /* empty */
   49           | paramlist0 typedvariable ','

   50 expr: binop_or

   51 literal: intlit
   52        | boollit
   53        | nillit
   54        | doublelit
   55        | strlit
   56        | arraylit
   57        | dictlit

   58 atom: literal
   59     | variable
   60     | self
   61     | '(' expr ')'

   62 primary: atom
   63        | primary '.' IDENTIFIER
   64        | primary '[' expr ']'
   65        | primary optparamtypenames '(' exprlist ')'

   66 unop_pm: primary
   67        | '-' unop_pm
   68        | '+' unop_pm

   69 unop_bool: unop_pm
   70          | '~' unop_bool
   71          | "not" unop_bool

   72 binop_mult: unop_bool
   73           | binop_mult '*' unop_bool
   74           | binop_mult '/' unop_bool
   75           | binop_mult '%' unop_bool

   76 binop_add: binop_mult
   77          | binop_add '+' binop_mult
   78          | binop_add '-' binop_mult

   79 binop_shift: binop_add
   80            | binop_shift "<<" binop_add
   81            | binop_shift ">>" binop_add

   82 binop_cmp: binop_shift
   83          | binop_cmp '<' binop_shift
   84          | binop_cmp "<=" binop_shift
   85          | binop_cmp '>' binop_shift
   86          | binop_cmp ">=" binop_shift

   87 binop_eq: binop_cmp
   88         | binop_eq "==" binop_cmp
   89         | binop_eq "!=" binop_cmp

   90 binop_bit_and: binop_eq
   91              | binop_bit_and '&' binop_eq

   92 binop_xor: binop_bit_and
   93          | binop_xor '^' binop_bit_and

   94 binop_bit_or: binop_xor
   95             | binop_bit_or '|' binop_xor

   96 binop_and: binop_bit_or
   97          | binop_and "and" binop_bit_or

   98 binop_or: binop_and
   99         | binop_or "or" binop_and

  100 intlit: INTEGER

  101 boollit: "True"
  102        | "False"

  103 nillit: "Nil"

  104 doublelit: DOUBLE

  105 strlit: STRING

  106 arraylit: '[' exprlist ']'

  107 exprlist: /* empty */
  108         | expr
  109         | exprlist ',' expr

  110 dictlit: '{' pairlist '}'

  111 pairkey: expr

  112 pairvalue: expr

  113 pair: pairkey ':' pairvalue

  114 pairlist: /* empty */
  115         | pair
  116         | pairlist ',' pair

  117 variable: IDENTIFIER

  118 typedvariable: IDENTIFIER "::" paramtypename

  119 paramtypename: typename optparamtypenames

  120 optparamtypenames: /* empty */
  121                  | '{' paramtypenames '}'

  122 paramtypenames: paramtypenames0 paramtypename

  123 paramtypenames0: /* empty */
  124                | paramtypenames0 paramtypename ','

  125 typename: IDENTIFIER typename0

  126 typename0: /* empty */
  127          | '.' IDENTIFIER typename0

  128 self: "self"


Terminals, with rules where they appear

END (0) 0 1
'%' (37) 75
'&' (38) 91
'(' (40) 25 61 65
')' (41) 25 61 65
'*' (42) 73
'+' (43) 68 77
',' (44) 41 49 109 116 124
'-' (45) 67 78
'.' (46) 63 127
'/' (47) 74
':' (58) 113
';' (59) 14
'<' (60) 83
'=' (61) 15 16 25 27 30
'>' (62) 85
'[' (91) 64 106
']' (93) 64 106
'^' (94) 93
'{' (123) 38 110 121
'|' (124) 95
'}' (125) 38 110 121
'~' (126) 70
error (256)
EOL (258)
"if" (259) 17
"then" (260) 17 19
"else" (261) 20
"elsif" (262) 19
"for" (263) 22
"while" (264) 21
"do" (265) 21 22
"def" (266) 25
"end" (267) 17 21 22 25 26
"class" (268) 26
"attr" (269) 27 28
"return" (270) 23 24
"import" (271)
"True" (272) 101
"False" (273) 102
"Nil" (274) 103
"<<" (275) 80
">>" (276) 81
"<=" (277) 84
">=" (278) 86
"==" (279) 88
"!=" (280) 89
"and" (281) 97
"or" (282) 99
"not" (283) 71
"::" (284) 118
"<-" (285) 22 43
"->" (286) 45
INTEGER (287) 100
DOUBLE (288) 104
STRING (289) 105
IDENTIFIER (290) 25 26 39 41 63 117 118 125 127
"self" (291) 128


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
start (60)
    on left: 1, on right: 0
stmtlist (61)
    on left: 2, on right: 1 17 19 20 21 22 25
stmtlist_buffer (62)
    on left: 3 4, on right: 2 4
stmt (63)
    on left: 5 6 7 8 9 10 11 12, on right: 4
stmtexpr (64)
    on left: 13, on right: 5
exprend (65)
    on left: 14, on right: 13 15 16 23 24
assignstmt (66)
    on left: 15 16, on right: 6
ifstmt (67)
    on left: 17, on right: 7
ifstmt_else (68)
    on left: 18 19 20, on right: 17 19
whilestmt (69)
    on left: 21, on right: 8
forstmt (70)
    on left: 22, on right: 9
returnstmt (71)
    on left: 23 24, on right: 10
funcdeclstmt (72)
    on left: 25, on right: 11 31
classdeclstmt (73)
    on left: 26, on right: 12 32
attrdeclstmt (74)
    on left: 27 28, on right: 33
attropteq (75)
    on left: 29 30, on right: 28
classbodystmt (76)
    on left: 31 32 33, on right: 36
classbodystmtlist (77)
    on left: 34, on right: 26
classbodystmtlist_buffer (78)
    on left: 35 36, on right: 34 36
typeparams (79)
    on left: 37 38, on right: 25 26
typeparams0 (80)
    on left: 39, on right: 38
typeparams0rest (81)
    on left: 40 41, on right: 39 41
inheritance (82)
    on left: 42 43, on right: 26
rettype (83)
    on left: 44 45, on right: 25
paramlist (84)
    on left: 46 47, on right: 25
paramlist0 (85)
    on left: 48 49, on right: 47 49
expr (86)
    on left: 50, on right: 13 15 16 17 19 21 22 24 27 30 61 64 108
    109 111 112
literal (87)
    on left: 51 52 53 54 55 56 57, on right: 58
atom (88)
    on left: 58 59 60 61, on right: 62
primary (89)
    on left: 62 63 64 65, on right: 63 64 65 66
unop_pm (90)
    on left: 66 67 68, on right: 67 68 69
unop_bool (91)
    on left: 69 70 71, on right: 70 71 72 73 74 75
binop_mult (92)
    on left: 72 73 74 75, on right: 73 74 75 76 77 78
binop_add (93)
    on left: 76 77 78, on right: 77 78 79 80 81
binop_shift (94)
    on left: 79 80 81, on right: 80 81 82 83 84 85 86
binop_cmp (95)
    on left: 82 83 84 85 86, on right: 83 84 85 86 87 88 89
binop_eq (96)
    on left: 87 88 89, on right: 88 89 90 91
binop_bit_and (97)
    on left: 90 91, on right: 91 92 93
binop_xor (98)
    on left: 92 93, on right: 93 94 95
binop_bit_or (99)
    on left: 94 95, on right: 95 96 97
binop_and (100)
    on left: 96 97, on right: 97 98 99
binop_or (101)
    on left: 98 99, on right: 50 99
intlit (102)
    on left: 100, on right: 51
boollit (103)
    on left: 101 102, on right: 52
nillit (104)
    on left: 103, on right: 53
doublelit (105)
    on left: 104, on right: 54
strlit (106)
    on left: 105, on right: 55
arraylit (107)
    on left: 106, on right: 56
exprlist (108)
    on left: 107 108 109, on right: 65 106 109
dictlit (109)
    on left: 110, on right: 57
pairkey (110)
    on left: 111, on right: 113
pairvalue (111)
    on left: 112, on right: 113
pair (112)
    on left: 113, on right: 115 116
pairlist (113)
    on left: 114 115 116, on right: 110 116
variable (114)
    on left: 117, on right: 22 27 59
typedvariable (115)
    on left: 118, on right: 16 28 47 49
paramtypename (116)
    on left: 119, on right: 45 118 122 124
optparamtypenames (117)
    on left: 120 121, on right: 65 119
paramtypenames (118)
    on left: 122, on right: 43 121
paramtypenames0 (119)
    on left: 123 124, on right: 122 124
typename (120)
    on left: 125, on right: 119
typename0 (121)
    on left: 126 127, on right: 125 127
self (122)
    on left: 128, on right: 60


state 0

    0 $accept: . start END

    $default  reduce using rule 3 (stmtlist_buffer)

    start            go to state 1
    stmtlist         go to state 2
    stmtlist_buffer  go to state 3


state 1

    0 $accept: start . END

    END  shift, and go to state 4


state 2

    1 start: stmtlist . END

    END  shift, and go to state 5


state 3

    2 stmtlist: stmtlist_buffer .
    4 stmtlist_buffer: stmtlist_buffer . stmt

    "if"        shift, and go to state 6
    "for"       shift, and go to state 7
    "while"     shift, and go to state 8
    "def"       shift, and go to state 9
    "class"     shift, and go to state 10
    "return"    shift, and go to state 11
    "True"      shift, and go to state 12
    "False"     shift, and go to state 13
    "Nil"       shift, and go to state 14
    "not"       shift, and go to state 15
    INTEGER     shift, and go to state 16
    DOUBLE      shift, and go to state 17
    STRING      shift, and go to state 18
    IDENTIFIER  shift, and go to state 19
    "self"      shift, and go to state 20
    '('         shift, and go to state 21
    '{'         shift, and go to state 22
    '['         shift, and go to state 23
    '-'         shift, and go to state 24
    '+'         shift, and go to state 25
    '~'         shift, and go to state 26

    $default  reduce using rule 2 (stmtlist)

    stmt           go to state 27
    stmtexpr       go to state 28
    assignstmt     go to state 29
    ifstmt         go to state 30
    whilestmt      go to state 31
    forstmt        go to state 32
    returnstmt     go to state 33
    funcdeclstmt   go to state 34
    classdeclstmt  go to state 35
    expr           go to state 36
    literal        go to state 37
    atom           go to state 38
    primary        go to state 39
    unop_pm        go to state 40
    unop_bool      go to state 41
    binop_mult     go to state 42
    binop_add      go to state 43
    binop_shift    go to state 44
    binop_cmp      go to state 45
    binop_eq       go to state 46
    binop_bit_and  go to state 47
    binop_xor      go to state 48
    binop_bit_or   go to state 49
    binop_and      go to state 50
    binop_or       go to state 51
    intlit         go to state 52
    boollit        go to state 53
    nillit         go to state 54
    doublelit      go to state 55
    strlit         go to state 56
    arraylit       go to state 57
    dictlit        go to state 58
    variable       go to state 59
    typedvariable  go to state 60
    self           go to state 61


state 4

    0 $accept: start END .

    $default  accept


state 5

    1 start: stmtlist END .

    $default  reduce using rule 1 (start)


state 6

   17 ifstmt: "if" . expr "then" stmtlist ifstmt_else "end"

    "True"      shift, and go to state 12
    "False"     shift, and go to state 13
    "Nil"       shift, and go to state 14
    "not"       shift, and go to state 15
    INTEGER     shift, and go to state 16
    DOUBLE      shift, and go to state 17
    STRING      shift, and go to state 18
    IDENTIFIER  shift, and go to state 62
    "self"      shift, and go to state 20
    '('         shift, and go to state 21
    '{'         shift, and go to state 22
    '['         shift, and go to state 23
    '-'         shift, and go to state 24
    '+'         shift, and go to state 25
    '~'         shift, and go to state 26

    expr           go to state 63
    literal        go to state 37
    atom           go to state 38
    primary        go to state 39
    unop_pm        go to state 40
    unop_bool      go to state 41
    binop_mult     go to state 42
    binop_add      go to state 43
    binop_shift    go to state 44
    binop_cmp      go to state 45
    binop_eq       go to state 46
    binop_bit_and  go to state 47
    binop_xor      go to state 48
    binop_bit_or   go to state 49
    binop_and      go to state 50
    binop_or       go to state 51
    intlit         go to state 52
    boollit        go to state 53
    nillit         go to state 54
    doublelit      go to state 55
    strlit         go to state 56
    arraylit       go to state 57
    dictlit        go to state 58
    variable       go to state 59
    self           go to state 61


state 7

   22 forstmt: "for" . variable "<-" expr "do" stmtlist "end"

    IDENTIFIER  shift, and go to state 62

    variable  go to state 64


state 8

   21 whilestmt: "while" . expr "do" stmtlist "end"

    "True"      shift, and go to state 12
    "False"     shift, and go to state 13
    "Nil"       shift, and go to state 14
    "not"       shift, and go to state 15
    INTEGER     shift, and go to state 16
    DOUBLE      shift, and go to state 17
    STRING      shift, and go to state 18
    IDENTIFIER  shift, and go to state 62
    "self"      shift, and go to state 20
    '('         shift, and go to state 21
    '{'         shift, and go to state 22
    '['         shift, and go to state 23
    '-'         shift, and go to state 24
    '+'         shift, and go to state 25
    '~'         shift, and go to state 26

    expr           go to state 65
    literal        go to state 37
    atom           go to state 38
    primary        go to state 39
    unop_pm        go to state 40
    unop_bool      go to state 41
    binop_mult     go to state 42
    binop_add      go to state 43
    binop_shift    go to state 44
    binop_cmp      go to state 45
    binop_eq       go to state 46
    binop_bit_and  go to state 47
    binop_xor      go to state 48
    binop_bit_or   go to state 49
    binop_and      go to state 50
    binop_or       go to state 51
    intlit         go to state 52
    boollit        go to state 53
    nillit         go to state 54
    doublelit      go to state 55
    strlit         go to state 56
    arraylit       go to state 57
    dictlit        go to state 58
    variable       go to state 59
    self           go to state 61


state 9

   25 funcdeclstmt: "def" . IDENTIFIER typeparams '(' paramlist ')' rettype '=' stmtlist "end"

    IDENTIFIER  shift, and go to state 66


state 10

   26 classdeclstmt: "class" . IDENTIFIER typeparams inheritance classbodystmtlist "end"

    IDENTIFIER  shift, and go to state 67


state 11

   23 returnstmt: "return" . exprend
   24           | "return" . expr exprend

    "True"      shift, and go to state 12
    "False"     shift, and go to state 13
    "Nil"       shift, and go to state 14
    "not"       shift, and go to state 15
    INTEGER     shift, and go to state 16
    DOUBLE      shift, and go to state 17
    STRING      shift, and go to state 18
    IDENTIFIER  shift, and go to state 62
    "self"      shift, and go to state 20
    ';'         shift, and go to state 68
    '('         shift, and go to state 21
    '{'         shift, and go to state 22
    '['         shift, and go to state 23
    '-'         shift, and go to state 24
    '+'         shift, and go to state 25
    '~'         shift, and go to state 26

    exprend        go to state 69
    expr           go to state 70
    literal        go to state 37
    atom           go to state 38
    primary        go to state 39
    unop_pm        go to state 40
    unop_bool      go to state 41
    binop_mult     go to state 42
    binop_add      go to state 43
    binop_shift    go to state 44
    binop_cmp      go to state 45
    binop_eq       go to state 46
    binop_bit_and  go to state 47
    binop_xor      go to state 48
    binop_bit_or   go to state 49
    binop_and      go to state 50
    binop_or       go to state 51
    intlit         go to state 52
    boollit        go to state 53
    nillit         go to state 54
    doublelit      go to state 55
    strlit         go to state 56
    arraylit       go to state 57
    dictlit        go to state 58
    variable       go to state 59
    self           go to state 61


state 12

  101 boollit: "True" .

    $default  reduce using rule 101 (boollit)


state 13

  102 boollit: "False" .

    $default  reduce using rule 102 (boollit)


state 14

  103 nillit: "Nil" .

    $default  reduce using rule 103 (nillit)


state 15

   71 unop_bool: "not" . unop_bool

    "True"      shift, and go to state 12
    "False"     shift, and go to state 13
    "Nil"       shift, and go to state 14
    "not"       shift, and go to state 15
    INTEGER     shift, and go to state 16
    DOUBLE      shift, and go to state 17
    STRING      shift, and go to state 18
    IDENTIFIER  shift, and go to state 62
    "self"      shift, and go to state 20
    '('         shift, and go to state 21
    '{'         shift, and go to state 22
    '['         shift, and go to state 23
    '-'         shift, and go to state 24
    '+'         shift, and go to state 25
    '~'         shift, and go to state 26

    literal    go to state 37
    atom       go to state 38
    primary    go to state 39
    unop_pm    go to state 40
    unop_bool  go to state 71
    intlit     go to state 52
    boollit    go to state 53
    nillit     go to state 54
    doublelit  go to state 55
    strlit     go to state 56
    arraylit   go to state 57
    dictlit    go to state 58
    variable   go to state 59
    self       go to state 61


state 16

  100 intlit: INTEGER .

    $default  reduce using rule 100 (intlit)


state 17

  104 doublelit: DOUBLE .

    $default  reduce using rule 104 (doublelit)


state 18

  105 strlit: STRING .

    $default  reduce using rule 105 (strlit)


state 19

  117 variable: IDENTIFIER .
  118 typedvariable: IDENTIFIER . "::" paramtypename

    "::"  shift, and go to state 72

    $default  reduce using rule 117 (variable)


state 20

  128 self: "self" .

    $default  reduce using rule 128 (self)


state 21

   61 atom: '(' . expr ')'

    "True"      shift, and go to state 12
    "False"     shift, and go to state 13
    "Nil"       shift, and go to state 14
    "not"       shift, and go to state 15
    INTEGER     shift, and go to state 16
    DOUBLE      shift, and go to state 17
    STRING      shift, and go to state 18
    IDENTIFIER  shift, and go to state 62
    "self"      shift, and go to state 20
    '('         shift, and go to state 21
    '{'         shift, and go to state 22
    '['         shift, and go to state 23
    '-'         shift, and go to state 24
    '+'         shift, and go to state 25
    '~'         shift, and go to state 26

    expr           go to state 73
    literal        go to state 37
    atom           go to state 38
    primary        go to state 39
    unop_pm        go to state 40
    unop_bool      go to state 41
    binop_mult     go to state 42
    binop_add      go to state 43
    binop_shift    go to state 44
    binop_cmp      go to state 45
    binop_eq       go to state 46
    binop_bit_and  go to state 47
    binop_xor      go to state 48
    binop_bit_or   go to state 49
    binop_and      go to state 50
    binop_or       go to state 51
    intlit         go to state 52
    boollit        go to state 53
    nillit         go to state 54
    doublelit      go to state 55
    strlit         go to state 56
    arraylit       go to state 57
    dictlit        go to state 58
    variable       go to state 59
    self           go to state 61


state 22

  110 dictlit: '{' . pairlist '}'

    "True"      shift, and go to state 12
    "False"     shift, and go to state 13
    "Nil"       shift, and go to state 14
    "not"       shift, and go to state 15
    INTEGER     shift, and go to state 16
    DOUBLE      shift, and go to state 17
    STRING      shift, and go to state 18
    IDENTIFIER  shift, and go to state 62
    "self"      shift, and go to state 20
    '('         shift, and go to state 21
    '{'         shift, and go to state 22
    '['         shift, and go to state 23
    '-'         shift, and go to state 24
    '+'         shift, and go to state 25
    '~'         shift, and go to state 26

    $default  reduce using rule 114 (pairlist)
